Disconnected the server from the fron end

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 4fr;
   gap: 10px;
   border-bottom: 1px solid rgb(178, 133, 220);
 }
@@ -23,7 +23,11 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+@media (width: 500px) {
+  .App-logo {
+    width: 20%;
+  }
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
